# tauri-plugin-fcm-push-notifications

./: .gitignore  Cargo.toml  README.md  package.json
.changes/: config.json  initial-release.md  readme.md
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: PushNotificationsPlugin.kt  PushNotificationsService.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  vite.config.js.timestamp-1700927750012.mjs
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: lib.rs
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
src/: commands.rs  desktop.rs  lib.rs  mobile.rs
test-notification/: Cargo.toml
test-notification/src/: main.rs
webview-src/: index.ts
