[package]
name = "tauri-plugin-push-notifications"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-push-notifications"

[dependencies]
tauri = { version = "2.0.0-alpha.18" }
serde = "1.0"
serde_json = "1"
thiserror = "1.0"
tao-macros = "0.1.2"


[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12" }
